<resources>
    <string name="app_name">养殖管家（测）</string>
    <!--我的(测)-->
    <string name="mine_change_pass">修改密码</string>
    <string name="mine_about">关于庆渔堂</string>
    <string name="mine_question">常见问题</string>
    <string name="mine_report">意见反馈</string>
    <string name="mine_exit">退出登录</string>
    <string name="csm_type">类型</string>
    <string name="csm_type1">建议</string>
    <string name="csm_type2">意见</string>
    <string name="csm_type3">投诉</string>
    <string name="csm_type4">其他</string>
    <string name="csm_title">标题</string>
    <string name="hint_csm_title">请输入标题</string>
    <string name="csm_context">内容</string>
    <string name="hint_csm_context">请输入反馈内容</string>
    <string name="csm_files">附件</string>
    <!--工作-->
    <string name="work_deal">待办事项</string>
    <string name="work_sensor">传感器业务</string>
    <string name="work_feed">饲料业务</string>
    <!--新建安装任务-->
    <string name="base_info">基础信息</string>
    <string name="choice_customer">选择养殖户</string>
    <string name="hint_choice_customer">请选择养殖户</string>
    <string name="customer_address">养殖户地址</string>
    <string name="contact_mobile">联系方式</string>
    <string name="choice_pact">查看合同</string>
    <string name="choice_deposit_pact">选择押金合同</string>
    <string name="choice_service_pact">查看服务合同</string>
    <string name="hint_choice_pact">请选择合同</string>
    <string name="pact_files">合同附件</string>
    <string name="device_list">设备清单</string>
    <string name="device_total">合计：0套</string>
    <string name="install_info">安装信息</string>
    <string name="install_address">安装地址</string>
    <string name="install_operator">运维人员</string>
    <string name="install_project_time">预计安装时间</string>
    <string name="please_choice">请选择</string>
    <string name="deposit_cost">押金费用</string>
    <string name="service_cost">服务费</string>
    <string name="cost_take">费用代收</string>
    <!--新建报修任务-->
    <string name="repair_info">报修信息</string>
    <string name="choice_fishpond">选择鱼塘</string>
    <string name="fishpond_address">鱼塘地址</string>
    <string name="device_id">设备ID</string>
    <string name="device_model">设备型号</string>
    <string name="fishpond_mobile">鱼塘联系方式</string>
    <string name="repair_desc">故障描述</string>
    <string name="hint_question_desc">问题描述</string>
    <string name="upload_repair_pic">上传报修照片</string>
    <!--任务详情-->
    <string name="install_order">安装工单</string>
    <string name="maintain_order">维护工单</string>
    <string name="repair_order">故障工单</string>
    <string name="callback_order">回收工单</string>
    <string name="deal_result">处理结果</string>
    <string name="confirm_time">接单时间</string>
    <string name="real_done_time">实际完成时间</string>
    <string name="is_take_service_cost">是否代收服务费</string>
    <string name="is_take_deposit_cost">是否代收押金费</string>
    <string name="files">附件</string>
    <string name="remark">备注</string>
    <string name="files_picture">附件图片</string>
    <string name="repair_create_pic">报修照片</string>
    <string name="repair_picture">维修单</string>
    <string name="fault_reason">故障原因</string>
    <string name="fault_repair">维修内容</string>
    <string name="getpay_picture">收款凭证</string>
    <string name="maintain_type">维护类型</string>
    <string name="maintain_next_time">下次维护时间</string>
    <string name="done_time">完成时间</string>
    <string name="deal_type">处理方式</string>
    <string name="is_change_device">是否更换设备</string>
    <string name="show_detail">查看详情</string>
    <!--设备回收-->
    <string name="approve">审核</string>
    <string name="device_callback">设备回收</string>
    <string name="choice_type">选择类型</string>
    <string name="approve_agree">同意回收</string>
    <string name="approve_refuse">撤销回收</string>
    <string name="approve_reason">同意/撤销原因</string>
    <string name="description">描述</string>
    <string name="fishpond_count">鱼塘数量</string>
    <string name="fishpond_info">鱼塘信息</string>
    <string name="callback_info">回收信息</string>
    <string name="callback_reason">回收原因</string>
    <string name="callback_device_count">拆机套数</string>
    <string name="callback_bank">养殖户退款银行</string>
    <string name="callback_account">养殖户退款账号</string>
    <string name="back_bank_name">退款银行</string>
    <string name="back_bank_person">退款户名</string>
    <string name="back_bank_account">退款账号</string>
    <string name="hint_back_bank_name">请输入开户银行</string>
    <string name="hint_back_bank_person">请输入持卡人</string>
    <string name="hint_back_bank_account">请输入卡号</string>
    <string name="device_count">设备数量</string>
    <string name="add_fishpond">＋ 添加鱼塘</string>
    <string name="fishpond_device_list">设备清单</string>
    <string name="add_fishpond_device">编辑</string>
    <!--回收工单-->
    <string name="device_is_normal">设备是否完好</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="describe">说明</string>
    <string name="upload_broken_devices">上传损坏设备照片</string>
    <string name="upload_retrieve_form">上传设备回收单</string>
    <string name="retrieve_confirm">确认回收</string>
    <string name="_broken_devices">损坏设备照片</string>
    <string name="_retrieve_form">设备回收单</string>
    <!--养殖户-->
    <string name="customer_normal">意向用户</string>
    <string name="customer_sign">签约用户</string>
    <string name="credit_score">信用分</string>
    <string name="integral">积分</string>
    <string name="device_taoshu">设备套数</string>
    <string name="fishpond_size">鱼塘面积</string>
    <string name="prepay_balance">账户金额</string>
    <string name="arrears_sum">欠款金额</string>
    <string name="click_fishpond_detail">查看鱼塘详情</string>
    <string name="click_device_detail">查看设备详情</string>
    <string name="customer_opera">操作</string>
    <string name="customer_record">记录</string>
    <!--开户申请-->
    <string name="customer_type">客户类型</string>
    <string name="customer_name">养殖户姓名</string>
    <string name="hint_customer_name">输入姓名</string>
    <string name="hint_contact_mobile">输入联系电话</string>
    <string name="identify_id">身份证号</string>
    <string name="hint_identify_id">输入身份证号</string>
    <string name="identify_info_notice">认证信息</string>
    <string name="age">出生日期</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="hint_age">请选择日期</string>
    <string name="address_area">行政区域</string>
    <string name="address_detail">家庭详细地址</string>
    <string name="hint_address_detail">输入详细地址</string>
    <string name="upload_identify_card">上传身份证</string>
    <string name="identify_card_face">正面照</string>
    <string name="identify_card_back">反面照</string>
    <string name="upload_info_form">上传登记表（签约必传）</string>
    <string name="upload_customer_pic">上传养殖户照片</string>
    <string name="upload_fishpond_pic">上传鱼塘照片</string>
    <string name="create_success">创建成功</string>
    <string name="create_success_desc">恭喜您已经成功创建账号</string>
    <string name="farmer_info_notice">请完善认证信息</string>
    <string name="update_farmer_info">成为签约用户</string>
    <string name="file_photos">附件图片</string>
    <string name="hint_input_money">请输入代收金额</string>
    <!--签/续约-->
    <string name="add_sign_type">＋ 新增合同类型</string>
    <string name="sign_form">签约单</string>
    <string name="pact_type">合同类型</string>
    <string name="pact_deposit">押金</string>
    <string name="pact_service">服务费</string>
    <string name="pact_prepay">预付款</string>
    <string name="pact_name">合同名称</string>
    <string name="hint_pact_name">养殖户名称+类型+时间</string>
    <string name="pact_money">合同金额</string>
    <string name="hint_pact_money">金额</string>
    <string name="money_unit">元</string>
    <string name="pact_date">签约日期</string>
    <string name="pact_ispay">养殖户是否付款</string>
    <string name="ispay_true">已付</string>
    <string name="ispay_false">未付</string>
    <string name="pact_pay_type">支付方式</string>
    <string name="pay_crash">现金</string>
    <string name="pay_bank">银行汇款</string>
    <string name="pact_take_money">实收金额</string>
    <string name="upload_pact">上传合同</string>
    <string name="upload_pay_file">上传付款凭证</string>
    <string name="upload_other">其他</string>
    <string name="sign_success">签约成功</string>
    <string name="sign_success_desc">恭喜您已经成功完成签约</string>
    <string name="install_device">设备安装</string>
    <string name="buy_feed">叫料</string>
    <!--个人中心-->
    <string name="header">头像</string>
    <string name="phone_code">手机号码</string>
    <string name="mobile_phone">手机</string>
    <string name="nick_name">昵称</string>
    <string name="signature">个性签名</string>
    <string name="big_area_manager">大区经理</string>
    <string name="manager_area">管辖区域</string>
    <string name="branch_center">分中心</string>
    <string name="new_password">新密码</string>
    <string name="new_password_again">确认密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="new_password_again_hint">请再次输入新密码</string>
    <string name="password_notice">密码长度6-20位，字母或数字</string>
    <string name="old_password_hint">请输入原密码</string>
    <!--消息-->
    <string name="message_alarm">告警消息</string>
    <string name="click_detail">点击查看</string>
    <string name="hint_search_customer">请输入姓名关键字</string>
    <string name="hint_search_task">请输入任务关键字</string>
    <string name="skip_sign">去签约</string>
    <string name="device_state">设备状态</string>
    <string name="device_detail">设备详情</string>
    <string name="device_config">参数配置</string>
    <string name="fishpond">鱼塘</string>
    <string name="sensor_config">传感器配置</string>
    <string name="control1_config">控制器1配置</string>
    <string name="control2_config">控制器2配置</string>
    <string name="hint_search_device">请输入关键字</string>


    <string name="control3_config">控制器3配置</string>
    <string name="control4_config">控制器4配置</string>
    <string name="connection_mode_select">选择连接方式</string>
    <string name="connection_mode_line">有线</string>
    <string name="connection_mode_wireless">无线</string>
    <string name="text_temperature">温度</string>
    <string name="text_ph">PH值</string>
    <string name="text_normal">正常</string>
    <string name="text_auto">自动</string>
    <string name="text_manual">手动</string>
    <string name="text_fishpond_detail">鱼塘详情</string>
    <string name="text_device_detail">设备详情</string>

    <!--设备告警-->
    <string name="text_device_status">状态</string>
    <string name="status_data_alarm1">数据告警1</string>
    <string name="status_data_alarm2">数据告警2</string>
    <string name="status_device_offline">不在线告警</string>
    <string name="status_device_alarm">设备告警</string>
    <string name="status_electricity_exception">电流异常</string>
    <string name="status_outages_alarm">断电告警</string>
    <string name="status_data_analysis_exception">数据解析异常</string>

</resources>
