<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/horizontal_padding_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/item_selector_light">

        <TextView
            style="@style/text_primary_16"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:gravity="center_vertical"
            android:text="@string/sign_form" />

        <TextView
            android:id="@+id/signbill_del"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|right"
            android:text="@string/delete"
            android:textColor="@color/color_red" />
    </RelativeLayout>

    <View style="@style/horizontal_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_primary_14"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/pact_type" />

        <RadioGroup
            android:id="@+id/signbill_type"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_gravity="right"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/type_deposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/round_radiobutton"
                android:checked="true"
                android:paddingLeft="4dp"
                android:text="@string/pact_deposit"
                android:textColor="@color/radio_text" />

            <RadioButton
                android:id="@+id/type_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:button="@drawable/round_radiobutton"
                android:paddingLeft="4dp"
                android:text="@string/pact_service"
                android:textColor="@color/radio_text" />

            <RadioButton
                android:id="@+id/type_prepay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:button="@drawable/round_radiobutton"
                android:paddingLeft="4dp"
                android:text="@string/pact_prepay"
                android:textColor="@color/radio_text" />
        </RadioGroup>
    </LinearLayout>

    <View style="@style/horizontal_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_primary_14"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/pact_date" />

        <com.bangqu.lib.widget.TextViewPlus
            android:id="@+id/signbill_date"
            style="@style/text_primary_14"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableRight="@mipmap/arrow_right_gray"
            android:gravity="center_vertical|right"
            android:hint="@string/please_choice" />
    </LinearLayout>

    <View style="@style/horizontal_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_primary_14"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/pact_name" />

        <TextView
            android:id="@+id/signbill_name"
            style="@style/text_primary_14"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/hint_pact_name" />
    </LinearLayout>

    <View style="@style/horizontal_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_primary_14"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/pact_money" />

        <EditText
            android:id="@+id/signbill_amount"
            style="@style/text_primary_14"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/hint_pact_money"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/text_primary_14"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/money_unit" />
    </LinearLayout>

    <View style="@style/horizontal_line" />

    <TextView
        style="@style/text_primary_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="8dp"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:text="@string/device_list" />

    <View style="@style/horizontal_line" />

    <com.bangqu.lib.widget.UnScrollListView
        android:id="@+id/install_device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View style="@style/horizontal_line" />

    <TextView
        android:id="@+id/install_device_count"
        style="@style/text_primary_14"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@color/color_white"
        android:gravity="center_vertical|right"
        android:text="@string/device_total" />

    <View style="@style/horizontal_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_primary_14"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/pact_ispay" />

        <RadioGroup
            android:id="@+id/signbill_ispay"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_gravity="right"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ispay_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/round_radiobutton"
                android:checked="true"
                android:paddingLeft="4dp"
                android:text="@string/ispay_false"
                android:textColor="@color/radio_text" />

            <RadioButton
                android:id="@+id/ispay_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:button="@drawable/round_radiobutton"
                android:paddingLeft="4dp"
                android:text="@string/ispay_true"
                android:textColor="@color/radio_text" />

        </RadioGroup>
    </LinearLayout>

    <View style="@style/horizontal_line" />

    <LinearLayout
        android:id="@+id/pay_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_primary_14"
                android:layout_width="0dp"
                android:layout_height="@dimen/item_height"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/pact_pay_type" />

            <RadioGroup
                android:id="@+id/signbill_paytype"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_height"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/pay_crash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/round_radiobutton"
                    android:checked="true"
                    android:paddingLeft="4dp"
                    android:text="@string/pay_crash"
                    android:textColor="@color/radio_text" />

                <RadioButton
                    android:id="@+id/pay_bank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:button="@drawable/round_radiobutton"
                    android:paddingLeft="4dp"
                    android:text="@string/pay_bank"
                    android:textColor="@color/radio_text" />

            </RadioGroup>
        </LinearLayout>

        <View style="@style/horizontal_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/text_primary_14"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_height"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/pact_take_money" />

            <EditText
                android:id="@+id/signbill_paysum"
                style="@style/text_primary_14"
                android:layout_width="0dp"
                android:layout_height="@dimen/item_height"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical|right"
                android:hint="@string/hint_pact_money"
                android:inputType="numberDecimal" />

            <TextView
                style="@style/text_primary_14"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_height"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="@string/money_unit" />
        </LinearLayout>

        <View style="@style/horizontal_line" />

    </LinearLayout>

    <TextView
        style="@style/text_primary_14"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_height"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:text="@string/upload_pact" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/pact_pictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/pay_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <View style="@style/horizontal_line" />

        <TextView
            style="@style/text_primary_14"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/upload_pay_file" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/pay_pictures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>