<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/toolbar_navigation" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:src="@mipmap/done_success" />

    <TextView
        style="@style/text_primary_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_success" />

    <TextView
        style="@style/text_secondary_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_success_desc" />

    <LinearLayout
        android:id="@+id/sign_opera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/back_confirm"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/btn_r5_solid_white"
            android:text="@string/back"
            android:textColor="@color/primary_text" />

        <Button
            android:id="@+id/skip_sign"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_r5_solid_primary"
            android:text="@string/skip_sign"
            android:textColor="@color/color_white" />

    </LinearLayout>

    <Button
        android:id="@+id/normal_back"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_r5_solid_primary"
        android:text="@string/back"
        android:textColor="@color/color_white"
        android:visibility="gone" />

</LinearLayout>